# kognisant-desktop

./: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
auto_brain/: context.md  steering.md
docs/: architecture-decisions.md  proto-agi.md
docs/database-schema/: agents.sql  episodic.sql  goals.sql  ltm.sql  overview.md  procedural.sql  semantic.sql  telemetry.sql  world-model.sql
docs/database_schema/: cognitive_state.sql  global_db.sql  memory_palace.sql  overview.md  sync_schema.sql  telemetry.sql  world_model.sql
docs/expanding_on/: affective-economy.md  agent-society.md  cloud-sync.md  cognitive-homeostasis.md  concurrency-model.md  goal-market.md  hardware-scaling.md  homunculus-self-model.md  llm-pool.md  memory-palace.md  predictive-processing.md  safety-architecture.md  self-modification.md  state-consistency.md  tool-system.md  tui-design.md  world-simulator.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/codex/: CodeViewer.vue  FileTree.vue  InteractionEvent.vue  TaskBoard.vue  TerminalPanel.vue  ThoughtChain.vue
frontend/src/components/common/: TitleBar.vue
frontend/src/components/kernel/: CommandInput.vue  DiagnosticPanel.vue
frontend/src/layouts/: CodexLayout.vue  DefaultLayout.vue  StudioLayout.vue
frontend/src/router/: index.js
frontend/src/views/codex/: CodexHome.vue
frontend/src/views/studio/: StudioHome.vue
rust-kernel/: Cargo.toml  package-lock.json  package.json
rust-kernel/src/: lib.rs
