[package]
name = "phoenix-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for direct Node.js bindings (no HTTP)
napi = { version = "2.12", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
